--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,2 +1,5 @@
 1.0.1:
-    - Initialize plugin.
+    - 'Initialize plugin.'
+1.0.2:
+    - 'Created table lindesay_messaging_messages'
+    - builder_table_create_lindesay_messaging_messages.php
