--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,12 +1,12 @@
 plugin:
-    name: 'lindesay.messaging::lang.plugin.name'
+    name: 'mattlindesay.messaging::lang.plugin.name'
     description: 'User messaging system'
     author: 'Matt Lindesay'
     icon: oc-icon-paper-plane
     homepage: 'http://github.com/mattlindesay/messaging-plugin'
 navigation:
     main-menu-item:
-        label: 'lindesay.messaging::lang.plugin.name'
+        label: 'mattlindesay.messaging::lang.plugin.name'
         url: /messaging
         icon: icon-paper-plane
         sideMenu:
